// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsive 1`] = `
Object {
  "@media (min-width: 601px) and (max-width: 1024px)": Object {
    "marginBottom": "8px",
    "marginLeft": "8px",
    "marginRight": "8px",
    "marginTop": "8px",
  },
  "marginBottom": "4px",
  "marginLeft": "4px",
  "marginRight": "4px",
  "marginTop": "4px",
}
`;

exports[`Responsive themekey lookup 1`] = `
Object {
  "@media (min-width: 601px) and (max-width: 1024px)": Object {
    "marginBottom": "16px",
    "marginLeft": "16px",
    "marginRight": "16px",
    "marginTop": "16px",
  },
  "marginBottom": "4px",
  "marginLeft": "4px",
  "marginRight": "4px",
  "marginTop": "4px",
}
`;

exports[`Shorthands overide longs 1`] = `
Object {
  "marginLeft": "32px",
  "marginRight": "4px",
}
`;

exports[`Uses Theme 1`] = `
Object {
  "marginBottom": "4px",
  "marginLeft": "4px",
  "marginRight": "4px",
  "marginTop": "4px",
}
`;
